Fixed a bug in shear calculations, added tests for BeamTest